--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Advanced Security Systems</title>
   <!-- FontAwesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        crossorigin="anonymous">
 
   <style>
     :root {
@@ -115,13 +117,13 @@
       text-align:center; cursor:pointer;
       transition:box-shadow .3s, border .3s;
     }
-    /* возвращаем белые иконки */
+    /* Белые иконки */
     .service-icon {
       filter: brightness(0) invert(1);
       display:block; margin:0 auto .5rem;
       width:40px; height:40px;
     }
-    /* чуть больше для 3-го и 6-го */
+    /* Большие для 3-го и 6-го */
     #order .service-list .service-item:nth-child(3) .service-icon,
     #order .service-list .service-item:nth-child(6) .service-icon {
       width:48px; height:48px;
@@ -183,7 +185,6 @@
       padding:2rem 1.5rem; max-width:800px; margin:0 auto; text-align:center;
     }
     .carousel-card h3 { margin-bottom:1rem; }
-    /* гарантируем показ картинок */
     .carousel-card .service-img {
       display:block;
       width:80%; max-width:400px; height:auto;
@@ -201,7 +202,7 @@
     .carousel-arrow.prev { left:1rem; }
     .carousel-arrow.next { right:1rem; }
 
-    /* Про компанію */
+    /* Про компанію и партнери */
     #about h2, #partners h2 { text-align:center; color:var(--accent); margin-bottom:1rem; }
     #about .content, #partners .content {
       background:var(--steel-dark); padding:1rem; border-radius:6px; margin:0 1rem;
@@ -285,11 +286,11 @@
       <div class="choose-service">Оберіть послугу</div>
       <div class="service-list">
         <div class="service-item">
-          <img src="https://i.ibb.co/WWtMg8ff/1.png" class="service-icon" alt="Офіси">
+          <img src="https://i.ibb.co/WWtMg8ff/1.png" class="service-icon" alt="Офісні приміщення">
           <div>Офісні приміщення</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/fzB5dw6b/2.png" class="service-icon" alt="Квартири">
+          <img src="https://i.ibb.co/fzB5dw6b/2.png" class="service-icon" alt="Квартири та будинки">
           <div>Квартири та будинки</div>
         </div>
         <div class="service-item">
@@ -297,15 +298,15 @@
           <div>Автомобілі</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/h6XyMJ5/4.png" class="service-icon" alt="Яхти та літаки">
+          <img src="https://i.ibb.co/h6XyMJ5/4.png" class="service-icon" alt="Яхти і літаки">
           <div>Яхти і літаки</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/t1jxYYH/5.png" class="service-icon" alt="Речі">
+          <img src="https://i.ibb.co/t1jxYYH/5.png" class="service-icon" alt="Речі та предмети">
           <div>Речі та предмети</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/VWBtyyhL/6.png" class="service-icon" alt="Переговори">
+          <img src="https://i.ibb.co/VWBtyyhL/6.png" class="service-icon" alt="Супровід переговорів">
           <div>Супровід переговорів</div>
         </div>
       </div>
@@ -331,7 +332,7 @@
             <p>Ми проводимо комплексну перевірку офісних приміщень за допомогою передових радіочастотних сканерів, тепловізорів та акустичних детекторів. Спочатку виконуємо ретельний огляд периметра та внутрішніх зон, щоб виявити будь-які приховані прослуховуючі пристрої чи камери спостереження. Надаємо докладний звіт із картами виявлених загроз та рекомендаціями щодо їх усунення. Після завершення перевірки ви отримаєте консультацію з оптимізації безпеки та встановлення додаткових захисних систем.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/tM8M6SpR/0df585aa9b70594e9dc304f952255ff6-29582.jpg" alt="Перевірка квартир та будинків">
+            <img class="service-img" src="https://i.ibb.co/tM8M6SpR/0df585aa9b70594e9dc304f952255ff6-29582.jpg" alt="Перевірка квартир і будинків">
             <h3>ПЕРЕВІРКА КВАРТИР І БУДИНКІВ</h3>
             <p>Наші фахівці виконують детальний огляд житлових приміщень із використанням детекторів радіочастот, тепловізорів та мікрофонних зондів. Перевіряємо стіни, меблі, побутову техніку та вентиляційні канали, щоб виключити будь-які спроби прихованого спостереження. Після завершення роботи складаємо звіт із фото- та відеофіксацією виявлених загроз та пропозиціями щодо їх усунення. Застосовуємо перевірені контрзаходи для захисту вашого особистого простору.</p>
           </div>
@@ -341,14 +342,14 @@
             <p>Мобільна команда виїжджає на місце з радіочастотними сканерами та тепловізорами для виявлення прихованих GPS-трекерів і прослуховуючих пристроїв. Проводимо аудит салону, багажника та моторного відсіку, щоб гарантувати повну безпеку вашого авто. Після перевірки складаємо звіт із виявленими ризиками та рекомендаціями щодо додаткового технічного захисту. За потреби встановлюємо екрануючі матеріали чи додаткові системи сигналізації.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/XZNygRmF/1405860949-1706419428-kadrs.jpg" alt="Перевірка яхт та літаків">
+            <img class="service-img" src="https://i.ibb.co/XZNygRmF/1405860949-1706419428-kadrs.jpg" alt="Перевірка яхт і літаків">
             <h3>ПЕРЕВІРКА ЯХТ ТА ЛІТАКІВ</h3>
             <p>Професійний аудит бортових систем яхт і літаків із використанням спеціалізованого обладнання для радіочастотного та інфрачервоного сканування. Перевіряємо вантажні відсіки, пасажирські кабіни та технічні приміщення на наявність прихованих моніторингових пристроїв. Результатом є детальний звіт із рекомендаціями щодо підвищення рівня безпеки та встановлення контрзаходів. Гарантуємо конфіденційність та повну технічну підтримку під час польотів чи морських подорожей.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/0pKgzdy8/5.jpg" alt="Перевірка речей та предметів">
+            <img class="service-img" src="https://i.ibb.co/0pKgzdy8/5.jpg" alt="Перевірка речей і предметів">
             <h3>ПЕРЕВІРКА РЕЧЕЙ І ПРЕДМЕТІВ</h3>
-            <p>Швидка та точна перевірка посилок, подарунків та особистих речей за допомогою портативних радіочастотних детекторів та тепловізійних камер. Ідентифікуємо розташування трекерів, мікрофонів чи камер у найменших предметах. Після завершення сканування ви отримуєте звіт із рекомендаціями щодо безпечного відкриття та зберігання вантажів. Послуга незамінна для корпоративних доставок і приватних дарунків.</p>
+            <p>Швидка та точна перевірка посилок, подарунків та особистих речей за допомогою портативних радіочастотних детекторів та тепловізійних камер. Ідентифікуємо розташування трекерів, мікрофонів чи камер у найменших предметах. Після завершення сканування ви отримаєте звіт із рекомендаціями щодо безпечного відкриття та зберігання вантажів. Послуга незамінна для корпоративних доставок і приватних дарунків.</p>
           </div>
           <div class="carousel-card">
             <img class="service-img" src="https://i.ibb.co/m5rrkDD1/a49c7903930d0af02ff231df98bf0fa7.jpg" alt="Супровід переговорів">
@@ -368,15 +369,6 @@
         <p>Advanced Security Systems — це ліцензований провайдер високотехнологічних послуг у сфері безпеки, який працює згідно з дозволами Держспецзв’язку України. Ми спеціалізуємося на виявленні та нейтралізації прослуховуючих пристроїв, GPS-трекерів, прихованих відеокамер і інших засобів технічного стеження.</p>
         <p>Наша команда — це ветерани елітних підрозділів та спецслужб, висококваліфіковані аналітики, інженери з контррозвідки та експерти з кібербезпеки. Завдяки багаторічному практичному досвіду та постійному вдосконаленню навичок, ми гарантуємо ефективне виявлення загроз і створення надійного захисту персональних, корпоративних і державних інтересів.</p>
         <p>Ми використовуємо найсучасніше обладнання світового класу та впроваджуємо перевірені методики аналізу і контрдій. Кожна операція проводиться з максимальним дотриманням конфіденційності, оперативністю та повною відповідальністю перед замовником.</p>
-        <p>Ми працюємо для тих, хто цінує безпеку:</p>
-        <ul>
-          <li>Державні установи та політичні діячі</li>
-          <li>Бізнес-лідери та підприємства</li>
-          <li>Адвокати, журналісти, правозахисники</li>
-          <li>Блогери, діячі публічної сфери та медицина</li>
-          <li>Приватні особи, які прагнуть захистити свій дім, власність і спокій</li>
-        </ul>
-        <p>Наша місія — забезпечити вас сучасними рішеннями в галузі технічної безпеки, створити простір, вільний від загроз, і стати вашим надійним партнером у будь-яких ситуаціях.</p>
       </div>
     </section>
 
@@ -385,73 +377,75 @@
       <div class="back-arrow" onclick="showSection('home')"><i class="fas fa-arrow-left"></i></div>
       <h2>Наші партнери</h2>
       <div class="content">
-        <!-- Тут був ваш контент партнерів -->
+        <!-- ваш оригинальный контент партнеров здесь -->
       </div>
     </section>
+
   </main>
 
   <script>
     function showSection(id) {
       const cur = document.querySelector('section.active');
       const nxt = document.getElementById(id);
-      if (cur!==nxt) {
-        cur.style.opacity='0';
-        setTimeout(()=>{
+      if (cur !== nxt) {
+        cur.style.opacity = '0';
+        setTimeout(() => {
           cur.classList.remove('active');
           nxt.classList.add('active');
-          nxt.style.opacity='1';
-        },500);
+          nxt.style.opacity = '1';
+        }, 500);
       }
     }
-    function showContactsModal(){
+    function showContactsModal() {
       document.getElementById('contacts-modal').classList.add('show');
     }
-    window.addEventListener('load', ()=>{
-      setTimeout(()=>{
+    window.addEventListener('load', () => {
+      setTimeout(() => {
         const pre = document.getElementById('preloader');
-        pre.style.opacity='0';
-        setTimeout(()=>{
-          pre.style.display='none';
-          document.getElementById('main').style.display='block';
-        },500);
-      },5000);
+        pre.style.opacity = '0';
+        setTimeout(() => {
+          pre.style.display = 'none';
+          document.getElementById('main').style.display = 'block';
+        }, 500);
+      }, 5000);
 
-      if('Notification' in window) Notification.requestPermission();
+      if ('Notification' in window) Notification.requestPermission();
 
       // выбор услуги
       const choose = document.querySelector('#order .choose-service');
       const items = document.querySelectorAll('#order .service-item');
-      items.forEach(i=>i.addEventListener('click',()=>i.classList.toggle('selected')));
+      items.forEach(i => i.addEventListener('click', () => i.classList.toggle('selected')));
 
       // форма
       const form = document.getElementById('order-form');
-      const pre = document.getElementById('preloader');
       const modal = document.getElementById('confirmation-modal');
       const back = document.querySelector('#order .back-arrow');
-      form.addEventListener('submit', e=>{
+      form.addEventListener('submit', e => {
         e.preventDefault();
-        choose.style.display='none';
-        pre.style.display='flex'; pre.style.opacity='1'; back.style.display='none';
-        setTimeout(()=>{
-          pre.style.opacity='0';
-          setTimeout(()=>pre.style.display='none',500);
+        choose.style.display = 'none';
+        document.getElementById('preloader').style.display = 'flex';
+        document.getElementById('preloader').style.opacity = '1';
+        back.style.display = 'none';
+        setTimeout(() => {
+          document.getElementById('preloader').style.opacity = '0';
+          setTimeout(() => document.getElementById('preloader').style.display = 'none', 500);
           modal.classList.add('show');
           form.reset();
-          items.forEach(i=>i.classList.remove('selected'));
-          if(Notification.permission==='granted'){
-            new Notification('Дякуємо!',{
-              body:'Ваше замовлення сформовано, очікуйте на дзвінок оператора.',
-              icon:'https://i.ibb.co/NgZcvp6S/2025-05-03-224713.png'
+          items.forEach(i => i.classList.remove('selected'));
+          if (Notification.permission === 'granted') {
+            new Notification('Дякуємо!', {
+              body: 'Ваше замовлення сформовано, очікуйте на дзвінок оператора.',
+              icon: 'https://i.ibb.co/NgZcvp6S/2025-05-03-224713.png'
             });
           }
-        },2000);
+        }, 2000);
       });
-      document.getElementById('modal-close').addEventListener('click',()=>{
+      document.getElementById('modal-close').addEventListener('click', () => {
         modal.classList.remove('show');
-        back.style.display='block';
-        choose.style.display='block';
+        back.style.display = 'block';
+        choose.style.display = 'block';
       });
-      document.getElementById('contacts-modal-close').addEventListener('click',()=>{
+      document.getElementById('contacts-modal-close').addEventListener('click', () => {
         document.getElementById('contacts-modal').classList.remove('show');
       });
 
@@ -460,14 +454,14 @@
       const cards = Array.from(track.children);
       const prev = document.querySelector('.carousel-arrow.prev');
       const next = document.querySelector('.carousel-arrow.next');
-      let idx=0;
-      function upd(){
-        track.style.transform=`translateX(-${idx*100}%)`;
-        prev.style.display=idx===0?'none':'block';
-        next.style.display=idx===cards.length-1?'none':'block';
+      let idx = 0;
+      function upd() {
+        track.style.transform = `translateX(-${idx * 100}%)`;
+        prev.style.display = idx === 0 ? 'none' : 'block';
+        next.style.display = idx === cards.length - 1 ? 'none' : 'block';
       }
-      prev.addEventListener('click',()=>{ if(idx>0) idx--; upd(); });
-      next.addEventListener('click',()=>{ if(idx<cards.length-1) idx++; upd(); });
+      prev.addEventListener('click', () => { if (idx > 0) idx--; upd(); });
+      next.addEventListener('click', () => { if (idx < cards.length - 1) idx++; upd(); });
       upd();
     });
   </script>
