--- a/index.html
+++ b/index.html
@@ -117,16 +117,12 @@
       text-align:center; cursor:pointer;
       transition:box-shadow .3s, border .3s;
     }
-    /* Белые иконки */
+    /* Іконки з FontAwesome */
     .service-icon {
-      filter: brightness(0) invert(1);
-      display:block; margin:0 auto .5rem;
-      width:40px; height:40px;
-    }
-    /* Большие для 3-го и 6-го */
-    #order .service-list .service-item:nth-child(3) .service-icon,
-    #order .service-list .service-item:nth-child(6) .service-icon {
-      width:48px; height:48px;
+      display:block;
+      margin:0 auto .5rem;
+      font-size:2rem;
+      color:var(--accent);
     }
     .service-item.selected {
       border:2px solid var(--accent);
@@ -286,27 +282,27 @@
       <div class="choose-service">Оберіть послугу</div>
       <div class="service-list">
         <div class="service-item">
-          <img src="https://i.ibb.co/WWtMg8ff/1.png" class="service-icon" alt="Офісні приміщення">
+          <i class="fas fa-building service-icon" aria-hidden="true"></i>
           <div>Офісні приміщення</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/fzB5dw6b/2.png" class="service-icon" alt="Квартири та будинки">
+          <i class="fas fa-home service-icon" aria-hidden="true"></i>
           <div>Квартири та будинки</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/r2B9tZcC/3.png" class="service-icon" alt="Автомобілі">
+          <i class="fas fa-car service-icon" aria-hidden="true"></i>
           <div>Автомобілі</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/h6XyMJ5/4.png" class="service-icon" alt="Яхти і літаки">
+          <i class="fas fa-ship service-icon" aria-hidden="true"></i>
           <div>Яхти і літаки</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/t1jxYYH/5.png" class="service-icon" alt="Речі та предмети">
+          <i class="fas fa-box-open service-icon" aria-hidden="true"></i>
           <div>Речі та предмети</div>
         </div>
         <div class="service-item">
-          <img src="https://i.ibb.co/VWBtyyhL/6.png" class="service-icon" alt="Супровід переговорів">
+          <i class="fas fa-handshake service-icon" aria-hidden="true"></i>
           <div>Супровід переговорів</div>
         </div>
       </div>
@@ -327,32 +323,32 @@
         <button class="carousel-arrow prev"><i class="fas fa-arrow-left"></i></button>
         <div class="carousel-track">
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/yFQGFDhC/2025-05-04-231513.png" alt="Перевірка офісів">
+            <img class="service-img" src="https://i.ibb.co/xqKKWCCP/image.jpg" alt="Перевірка офісів">
             <h3>ПЕРЕВІРКА ОФІСІВ</h3>
             <p>Ми проводимо комплексну перевірку офісних приміщень за допомогою передових радіочастотних сканерів, тепловізорів та акустичних детекторів. Спочатку виконуємо ретельний огляд периметра та внутрішніх зон, щоб виявити будь-які приховані прослуховуючі пристрої чи камери спостереження. Надаємо докладний звіт із картами виявлених загроз та рекомендаціями щодо їх усунення. Після завершення перевірки ви отримаєте консультацію з оптимізації безпеки та встановлення додаткових захисних систем.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/tM8M6SpR/0df585aa9b70594e9dc304f952255ff6-29582.jpg" alt="Перевірка квартир і будинків">
+            <img class="service-img" src="https://i.ibb.co/0pKgzdy8/image.jpg" alt="Перевірка квартир і будинків">
             <h3>ПЕРЕВІРКА КВАРТИР І БУДИНКІВ</h3>
             <p>Наші фахівці виконують детальний огляд житлових приміщень із використанням детекторів радіочастот, тепловізорів та мікрофонних зондів. Перевіряємо стіни, меблі, побутову техніку та вентиляційні канали, щоб виключити будь-які спроби прихованого спостереження. Після завершення роботи складаємо звіт із фото- та відеофіксацією виявлених загроз та пропозиціями щодо їх усунення. Застосовуємо перевірені контрзаходи для захисту вашого особистого простору.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/5xRs0NG2/carGps.jpg" alt="Перевірка автомобілів">
+            <img class="service-img" src="https://i.ibb.co/XZNygRmF/image.jpg" alt="Перевірка автомобілів">
             <h3>ПЕРЕВІРКА АВТОМОБІЛІВ</h3>
             <p>Мобільна команда виїжджає на місце з радіочастотними сканерами та тепловізорами для виявлення прихованих GPS-трекерів і прослуховуючих пристроїв. Проводимо аудит салону, багажника та моторного відсіку, щоб гарантувати повну безпеку вашого авто. Після перевірки складаємо звіт із виявленими ризиками та рекомендаціями щодо додаткового технічного захисту. За потреби встановлюємо екрануючі матеріали чи додаткові системи сигналізації.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/XZNygRmF/1405860949-1706419428-kadrs.jpg" alt="Перевірка яхт і літаків">
+            <img class="service-img" src="https://i.ibb.co/5xRs0NG2/image.jpg" alt="Перевірка яхт і літаків">
             <h3>ПЕРЕВІРКА ЯХТ ТА ЛІТАКІВ</h3>
             <p>Професійний аудит бортових систем яхт і літаків із використанням спеціалізованого обладнання для радіочастотного та інфрачервоного сканування. Перевіряємо вантажні відсіки, пасажирські кабіни та технічні приміщення на наявність прихованих моніторингових пристроїв. Результатом є детальний звіт із рекомендаціями щодо підвищення рівня безпеки та встановлення контрзаходів. Гарантуємо конфіденційність та повну технічну підтримку під час польотів чи морських подорожей.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/0pKgzdy8/5.jpg" alt="Перевірка речей і предметів">
+            <img class="service-img" src="https://i.ibb.co/BVqVJm2k/image.jpg" alt="Перевірка речей і предметів">
             <h3>ПЕРЕВІРКА РЕЧЕЙ І ПРЕДМЕТІВ</h3>
             <p>Швидка та точна перевірка посилок, подарунків та особистих речей за допомогою портативних радіочастотних детекторів та тепловізійних камер. Ідентифікуємо розташування трекерів, мікрофонів чи камер у найменших предметах. Після завершення сканування ви отримаєте звіт із рекомендаціями щодо безпечного відкриття та зберігання вантажів. Послуга незамінна для корпоративних доставок і приватних дарунків.</p>
           </div>
           <div class="carousel-card">
-            <img class="service-img" src="https://i.ibb.co/m5rrkDD1/a49c7903930d0af02ff231df98bf0fa7.jpg" alt="Супровід переговорів">
+            <img class="service-img" src="https://i.ibb.co/yFQGFDhC/image.png" alt="Супровід переговорів">
             <h3>СУПРОВІД ПЕРЕГОВОРІВ</h3>
             <p>Організація захищених переговорів із використанням акустичної ізоляції, шифрованих каналів зв’язку та постійного технічного моніторингу. Забезпечуємо контроль за навколишнім середовищем для запобігання будь-яким спробам прослуховування. Кожна зустріч супроводжується кваліфікованими інженерами, які оперативно реагують на будь-які загрози. Гарантуємо повну конфіденційність і створення максимально безпечного простору для ваших переговорів.</p>
           </div>
@@ -377,7 +373,7 @@
       <div class="back-arrow" onclick="showSection('home')"><i class="fas fa-arrow-left"></i></div>
       <h2>Наші партнери</h2>
       <div class="content">
-        <!-- ваш оригинальный контент партнеров здесь -->
+        <!-- ваш оригинальный контент партнерів -->
       </div>
     </section>
 
@@ -411,7 +407,7 @@
 
       if ('Notification' in window) Notification.requestPermission();
 
-      // выбор услуги
+      // вибір послуги
       const choose = document.querySelector('#order .choose-service');
       const items = document.querySelectorAll('#order .service-item');
       items.forEach(i => i.addEventListener('click', () => i.classList.toggle('selected')));
